[gd_scene load_steps=12 format=3 uid="uid://reiyjueprlxv"]

[ext_resource type="Script" path="res://GameTest/map.gd" id="1_bg5uh"]
[ext_resource type="Texture2D" uid="uid://cbnoq71ficd22" path="res://Art/Map/Naqb.png" id="3_f02ip"]
[ext_resource type="Texture2D" uid="uid://b8l8y3gc6dnwk" path="res://Art/Map/Naqb_Pressed.png" id="3_r0ljy"]
[ext_resource type="Texture2D" uid="uid://depdups0tcovk" path="res://Art/Map/Ramla.png" id="4_1s12h"]
[ext_resource type="BitMap" uid="uid://bg8g75r5jrmny" path="res://Art/Map/Naqb_mask.png" id="5_alvkq"]
[ext_resource type="BitMap" uid="uid://cl1vphrgegmxp" path="res://Art/Map/Ramla_mask.png" id="5_da0ep"]
[ext_resource type="Texture2D" uid="uid://b2kb1h7kibbn2" path="res://Art/Map/Ramla_pressed.png" id="6_ur7pc"]
[ext_resource type="Texture2D" uid="uid://873mkiit25v2" path="res://Art/Map/Gaza.png" id="6_xuvvx"]
[ext_resource type="BitMap" uid="uid://ctwsj14jljvsd" path="res://Art/Map/Gaza_mask.png" id="7_u0p86"]
[ext_resource type="Texture2D" uid="uid://h177nk837f8a" path="res://Art/Map/Gaza_Pressed.png" id="9_oeola"]

[sub_resource type="ButtonGroup" id="ButtonGroup_7lb7f"]

[node name="map" type="Node2D"]
script = ExtResource("1_bg5uh")
metadata/_edit_vertical_guides_ = [288.0]

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 576.0
offset_bottom = 1022.0
size_flags_horizontal = 0
size_flags_vertical = 0
color = Color(0.356863, 0.545098, 0.537255, 1)
metadata/_edit_use_anchors_ = true

[node name="GameClick" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
self_modulate = Color(1, 1, 1, 0)
offset_right = 576.0
offset_bottom = 1022.0
toggle_mode = true
button_group = SubResource("ButtonGroup_7lb7f")

[node name="Btn_Naqb" type="TextureButton" parent="."]
offset_left = 98.0
offset_top = 381.0
offset_right = 336.0
offset_bottom = 844.0
toggle_mode = true
button_group = SubResource("ButtonGroup_7lb7f")
texture_normal = ExtResource("3_f02ip")
texture_pressed = ExtResource("3_r0ljy")
texture_click_mask = ExtResource("5_alvkq")

[node name="Btn_Ramla" type="TextureButton" parent="."]
offset_left = 176.0
offset_top = 296.0
offset_right = 254.0
offset_bottom = 372.0
toggle_mode = true
button_group = SubResource("ButtonGroup_7lb7f")
texture_normal = ExtResource("4_1s12h")
texture_pressed = ExtResource("6_ur7pc")
texture_click_mask = ExtResource("5_da0ep")

[node name="Btn_Gaza" type="TextureButton" parent="."]
offset_left = 88.0
offset_top = 326.0
offset_right = 222.0
offset_bottom = 470.0
toggle_mode = true
button_group = SubResource("ButtonGroup_7lb7f")
texture_normal = ExtResource("6_xuvvx")
texture_pressed = ExtResource("9_oeola")
texture_click_mask = ExtResource("7_u0p86")

[node name="SelectedMapPanel" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 70.0
offset_top = 880.0
offset_right = 508.0
offset_bottom = 976.0

[node name="Label_SelectedMap" type="Label" parent="SelectedMapPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -171.0
offset_top = -45.0
offset_right = 171.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 25
text = "SELECTED NAME"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Btn_Start" type="Button" parent="SelectedMapPanel"]
layout_mode = 0
offset_left = 104.0
offset_top = 49.0
offset_right = 336.0
offset_bottom = 96.0
text = "START"

[connection signal="pressed" from="GameClick" to="." method="_on_game_click_pressed"]
[connection signal="pressed" from="Btn_Naqb" to="." method="_on_btn_naqb_pressed"]
[connection signal="pressed" from="Btn_Ramla" to="." method="_on_btn_ramla_pressed"]
[connection signal="pressed" from="Btn_Gaza" to="." method="_on_btn_gaza_pressed"]
[connection signal="pressed" from="SelectedMapPanel/Btn_Start" to="." method="_on_btn_start_pressed"]
